# microgradx

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
bench/: conv_im2col.py
docs/: MATH.md  ROADMAP.md  index.html
examples/: cnn_synth.py  encoder_stack_demo.py  mnist_mlp.py  seq_classify.py  tiny_transformer.py  transformer_block_demo.py
microgradx/: __init__.py  logging.py  metrics.py  serialization.py  tensor.py  utils.py
microgradx/autograd/: __init__.py  function.py  grad_check.py  grad_mode.py  ops.py
microgradx/backend/: __init__.py
microgradx/data/: __init__.py  dataloader.py  dataset.py  transforms.py
microgradx/export/: __init__.py  onnx.py
microgradx/nn/: __init__.py  activation.py  attention.py  conv.py  dropout.py  embedding.py  init.py  linear.py  loss.py  module.py  norm.py  rnn.py  transformer.py  upsample.py
microgradx/optim/: __init__.py  adam.py  adamw.py  lion.py  lr_scheduler.py  optimizer.py  radam.py  sgd.py
microgradx/quant/: __init__.py  dynamic.py
microgradx/training/: __init__.py  amp.py  early_stopping.py  ema.py  trainer.py
tests/: test_activations_extra.py  test_adam.py  test_autograd.py  test_batchnorm.py  test_bce.py  test_bilinear_upsample.py  test_checkpoint.py  test_conv1d.py  test_conv_fast.py  test_cosine_warm_restarts.py  test_csv_logger.py  test_early_stopping.py  test_ema.py  test_freeze.py  test_grad_mode.py  test_groupnorm.py  test_huber.py  test_label_smoothing.py  test_lr_scheduler.py  test_metrics.py  test_module_buffers.py  test_nn.py  test_onecycle.py  test_optim.py  test_pool.py  test_positional.py  test_quant.py  test_radam.py  test_reduce_on_plateau.py  test_rnn.py  test_seed.py  test_serialization.py  test_tensor.py  test_transformer.py  test_transformer_encoder.py  test_upsample.py
