[project]
name = "microgradx"
version = "0.3.0"
description = "Minimalist autograd & neural-net framework on NumPy — RNN/GRU/LSTM, Conv1d/2d, optimisers, INT8 quant, schedulers."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Sebby1770" }]
keywords = [
    "autograd",
    "numpy",
    "deep-learning",
    "neural-networks",
    "machine-learning",
    "rnn",
    "lstm",
    "quantization",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = ["numpy>=1.22"]

[project.optional-dependencies]
gpu = ["cupy-cuda12x"]
onnx = ["onnx>=1.14"]
test = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/Sebby1770/microgradx"
Repository = "https://github.com/Sebby1770/microgradx"
Changelog = "https://github.com/Sebby1770/microgradx/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["microgradx*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
